Improve api error handling (#33)
* implement to map exceptions to http response

* update tests

* add error schema to the open api specification
